--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -131,7 +131,9 @@
                     <div class="row" style="position:relative;" 
                         mouseenter.trigger="scroll(0)">
                         <div style="margin-top: 6px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
-                        <help if.bind="phase == 'not-editing'" topic="tags" position="bottom"
+                        <help if.bind="user.advanced_user && phase == 'not-editing'" topic="tags" position="bottom"
+                            style="position:absolute;left:0px;top:26px;"></help>
+                        <help if.bind="(!user.advanced_user) && phase == 'not-editing'" topic="tags-simple" position="bottom"
                             style="position:absolute;left:0px;top:26px;"></help>
                         <help if.bind="phase == 'selecting-stories'" topic="selecting-stories" position="bottom"
                             style="position:absolute;left:0px;top:26px;"></help>
@@ -160,6 +162,10 @@
                         <span if.bind="! num_of_stories">&nbsp;</span>
                         <div style="margin-bottom:5px;font-size:120%">${'stories.words' & t}</div>
                         <help topic="words" position="left" style="position:absolute;left:0px;top:46px;"
+                            if.bind="user.advanced_user"
+                            params.bind="help_data"></help>
+                        <help topic="words-simple" position="left" style="position:absolute;left:0px;top:46px;"
+                            if.bind="!user.advanced_user"
                             params.bind="help_data"></help>
                         <multi-select options.bind="stories_index" selected_options.bind="params.selected_words"
                             keywords.two-way="keywords" place_holder_text="stories.word-index" height="201"
