--- a/src/resources/elements/selector.html
+++ b/src/resources/elements/selector.html
@@ -1,5 +1,5 @@
 <template>
-    <form role="form" id="selector">
+    <form role="form" ref="selector">
         <select if.bind="user.editing" value.bind="selectedval" css="width:${width}">
             <option repeat.for="option of options" model.bind="option.value" >${option.name}</option>
         </select>
