--- a/src/resources/elements/fit-text.html
+++ b/src/resources/elements/fit-text.html
@@ -1,5 +1,5 @@
 <template>
-    <div>
+    <div css="width:${width}px;height:${height}px;">
         <canvas ref="canvas" resize.delegate="fit()" show.bind="!truncated_text">
             ${dummy}
         </canvas>
