--- a/src/members/members.html
+++ b/src/members/members.html
@@ -52,7 +52,7 @@
                         <div class="input-group" style="padding-top:16px;" if.bind="relatives_mode">
                             <help topic="family-connections" position="bottom"></help>
                         </div>
-                        <quiz if.bind="user.privileges.TESTER" 
+                        <quiz 
                             q_state.bind="q_state" 
                             questions.bind="questions" 
                             to_clear_now.bind="to_clear_now"
