--- a/src/resources/elements/edit-side-by-side.html
+++ b/src/resources/elements/edit-side-by-side.html
@@ -1,6 +1,6 @@
 <template>
     <div class="row" css="height:${height}px;">
-        <div class="col-md-6" innerhtml.bind="fixed_str"
+        <div class="col-md-6" innerhtml.bind="fixed_str" if.bind="fixed_str"
             id="left-panel"
             style="height:566px;width:561px;font-size:105%;overflow:auto;background-color:beige;border:4px solid lightgray;">
 
@@ -27,9 +27,23 @@
                     disabled.bind="dirty ? '' : 'disabled'">
                     Cancel
                 </button>
+                <button class="btn btn-success" style="width: 80px;"
+                    click.delegate="approve_changes($event)">
+                    Approve
+                </button>
             </div>
 
         </div>
     </div>
+    <style>
+        span.removed {
+            color: white;
+            background-color: red;
+        }
+        span.added {
+            color:black;
+            background-color: yellow;
+        }
+    </style>
 
 </template>
