--- a/src/stories/confirm-story.html
+++ b/src/stories/confirm-story.html
@@ -8,7 +8,7 @@
         if.bind="unapproved==true"
         class="container content-area">
         <edit-side-by-side if.bind="story_id" fixed_str.bind="left_text" edited_str.bind="right_text" height.bind="520"
-            init.bind="init" dirty.bind="dirty" save.delegate="saved()">
+            init.bind="init" dirty.bind="dirty" save.delegate="saved()" approve.delegate="approved()">
         </edit-side-by-side>
     </div>
 
