display story changes

--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -116,7 +116,7 @@
                 </date-range>
             </span>
             <span if.bind="user.editing" class="full-size-photo-info ${theme.rtltr}"
-                css="width:${Math.max(slide[slide.side].width)}px;font-size:130%;color:yellow;">
+                css="width:${Math.max(slide[slide.side].width)}px;font-size:130%;color:yellow;width:800px;">
                 ${instruction}
             </span>
         </div>
