changed "gb_photos" to "apps_data"

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
     <title>סִפּוּרֵי גִּבְעַת בְּרֶנֶר</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://gbstories.org/gbs__test/static/fontawesome/css/all.css"
-        crossorigin="anonymous">
+    <!--link rel="stylesheet" href="https://gbstories.org/gbs__test/static/fontawesome/css/all.css"
+        crossorigin="anonymous"-->
+    <link rel="stylesheet" href="fontawesome/css/all.css">
 </head>
 
 <body aurelia-app="main">
@@ -29,7 +30,7 @@
             }
         }
     </script>
-    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper" ></script>
+    <script src="scripts/vendor-bundle-985bd6f1f5.js" data-main="aurelia-bootstrapper" ></script>
 </body>
 
 </html>
