--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             }
         }
     </script>
-    <script src="scripts/vendor-bundle-985bd6f1f5.js" data-main="aurelia-bootstrapper" ></script>
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper" ></script>
 </body>
 
 </html>
