--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="JnVD2e5l285fDPinK4jNDMeZ19eZs1Rx5WRLajzCxs8" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <title>סִפּוּרֵי גִּבְעַת בְּרֶנֶר</title>
+    <title>Stories</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="fontawesome/css/all.css">
 </head>
