get all topics while editing in photo detail

--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -135,6 +135,7 @@
                 </div>
             </div>
         </div>
+        <div show.bind="user_editing"></div> <!-- To ensure response to editing mode change -->
     </div>
 
 </template>
