--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -69,7 +69,7 @@
                             <span repeat.for="video of video_list | filter: filter : '*selected' : 'name' | keeplen : length_keeper | take : videos_per_page : first_index" class="fr-video fr-fvc fr-draggable fr-dvi"
                                 
                                 contenteditable="false" draggable="true">
-                                <iframe class="video-iframe" src.bind="video.src" frameborder="0" allowfullscreen="">
+                                <iframe class="video-iframe" src.bind="video.src" frameborder="0" allowfullscreen="" if.bind="video.video_type=='youtube'">
                                     <style>
                                         div.yp-title-beacon {
                                             display: none;
