--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -27,13 +27,10 @@
 
                 <span>
                     <span dir="${theme.rtltr}" if.bind="photo_story.name">${photo_story.name}</span>
-                    <button class="btn btn-basic" if.bind="user.editing || has_location" click.delegate="expose_map()"
+                    <button class="btn btn-basic" if.bind="user.editing || marked" click.delegate="expose_map()"
                         style="margin-top:8px;border:solid 2px lightgray;float:left;">
                         <i class="fa fa-map-marker-alt" style="color:dodgerblue"></i> ${view_hide_map}
                     </button>
-                    <!-- <input type="number" if.bind="map_visible" min="1" max="25" value.bind="zoom" 
-                        change.delegate="zoom_changed($event) & debounce: 1000"
-                        style="margin-top:8px;margin-left:5px; height:35px;padding-right:4px;padding-bottom:5px;font-size:130%;border:solid 2px lightgray;float:left;"> -->
                 </span>
                 <span dir="${theme.rtltr}" if.bind="photographer_name">${'photos.photographer-name' & t}:
                     ${photographer_name}</span>
@@ -55,21 +52,16 @@
                 </div>
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
-                        <div show.bind="map_visible">
-                            <!--form submit.delegate="onSubmitAddress()">
-                                <aup-google-places disabled="", value.bind="location_address"></aup-google-places>
-                                <button type="submit">Submit</button>
-                            </form-->
-                            <google-map
-								longitude.two-way="longitude"
-							    latitude.two-way="latitude"
-                                map-click.delegate="create_marker($event)"
-                                bounds-change.delegate="bounds_changed($event)"
-								markers.bind="markers" 
-								zoom.bind="zoom"
-                                auto-update-bounds="true">
-                            </google-map>
-                        </div>
+                        <my-map show.bind="map_visible"
+                                longitude.bind="longitude"
+                                latitude.bind="latitude"
+                                zoom.bind="zoom"
+                                can_mark.bind="user.editing"
+                                marked.bind="marked"
+                                location-changed.delegate="location_changed($event)"
+                        >
+                        </my-map>
+
                         <div style="padding-right:0" if.bind="! map_visible">
                             <div if.bind="! user.editing" class="row photo-story">
                                 <div class="fr-view" dir="${story_dir}">
