--- a/src/resources/elements/my-map/my-map.html
+++ b/src/resources/elements/my-map/my-map.html
@@ -8,6 +8,7 @@
                 class="controls"
                 type="text"
                 placeholder="${'search-location' & t}"
+                value.bind="search_pattern"
         />
         <google-map
                 longitude.two-way="longitude"
